--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -11,14 +11,14 @@
 
 ### Day-1Q
 
-- 明日までに、この資料を<u>仕上げて</u>おいてくだしい。
+- 明日までに、この資料を**仕上げて**おいてくだしい。
 
 1. 出して
 2. 直して
 3. 完成させて
 4. 移動させて
 
-- このタオルとシャツは<u>しめっている</u>ね。
+- このタオルとシャツは**しめっている**ね。
 
 1. まだきれになっていない
 2. まだ乾いていない
@@ -32,7 +32,7 @@
 
 **ANS: 3,2**  
 
-- 明日までに、この資料を<u>仕上げて</u>おいてくだしい。
+- 明日までに、この資料を**仕上げて**おいてくだしい。
 
 > 請在明天前把這先資料完成
 
@@ -91,7 +91,7 @@
         - 私は弟に部屋を掃除させました。
         - 我讓弟弟打掃房間。  
 
-- このタオルとシャツは<u>しめっている</u>ね。
+- このタオルとシャツは**しめっている**ね。
 > 這毛巾和襯衫都是濕的
 
 | **日文** | **中文** | 
