新增選項編號

--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -36,13 +36,13 @@
 
 > 請在明天前把這先資料完成
 
-| **日文** | **中文** | **例句**       |
-|----------|------------|----------------|
-| 仕上げる  | 完成      | 仕事を仕上げる(完成工作)     |
-| 出して  | 拿出、取出 | 手を出す(伸手)     |
-| 直して  |修理、修補、訂正、修改  | 誤るを直す。(訂正錯誤)|
-| 完成する| 完成、落成、完工 | プロジェクトを無事に完成しました。(順利地完成了專案。)  |
-| 移動する| 移動、轉移 | 駅まで歩いて移動するのが好きです。(我喜歡走路到車站)    |
+| **選項編號**    | **日文** | **中文** | **例句**       |
+|----------|----------|------------|----------------|
+|題目| 仕上げる  | 完成      | 仕事を仕上げる(完成工作)     |
+|1| 出して  | 拿出、取出 | 手を出す(伸手)     |
+|2| 直して  |修理、修補、訂正、修改  | 誤るを直す。(訂正錯誤)|
+|3| 完成する| 完成、落成、完工 | プロジェクトを無事に完成しました。(順利地完成了專案。)  |
+|4| 移動する| 移動、轉移 | 駅まで歩いて移動するのが好きです。(我喜歡走路到車站)    |
 
 #### 文法: 動詞的使役形 (させて)
 
@@ -68,7 +68,6 @@
 - 第二類動詞:
     - 直接去る加させる
     - 變化:
-
         | **原型動詞** | **使役形** | **中文**       |
         |----------|------------|----------------|
         | 食べる  | 食べさせる   | 讓某人吃    |
@@ -94,12 +93,12 @@
 - このタオルとシャツは**しめっている**ね。
 > 這毛巾和襯衫都是濕的
 
-| **日文** | **中文** | 
-|----------|------------|
-| まだきれになっていない  | 還沒弄乾淨   |
-|まだ乾いていない  | 還沒 | 
-| もうきれいになっている  |　已經很乾淨了  | 
-| もう乾いている| 已經乾了|
+| **選項編號**    | **日文** | **中文** | 
+|----------|----------|------------|
+|1| まだきれになっていない  | 還沒弄乾淨   |
+|2|まだ乾いていない  | 還沒 | 
+|3| もうきれいになっている  |　已經很乾淨了  | 
+|4| もう乾いている| 已經乾了|
 
 > 乾く（かわく）：　乾、冷淡、無感情<br>
 > 髪の毛が乾く(頭髮乾了)
