--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -41,7 +41,7 @@
 |題目| 仕上げる  | 完成      | 仕事を仕上げる(完成工作)     |
 |1| 出して  | 拿出、取出 | 手を出す(伸手)     |
 |2| 直して  |修理、修補、訂正、修改  | 誤るを直す。(訂正錯誤)|
-|3| 完成する| 完成、落成、完工 | プロジェクトを無事に完成しました。(順利地完成了專案。)  |
+|**3**| **完成する**| **完成、落成、完工** | **プロジェクトを無事に完成しました。(順利地完成了專案。)**  |
 |4| 移動する| 移動、轉移 | 駅まで歩いて移動するのが好きです。(我喜歡走路到車站)    |
 
 #### 文法: 動詞的使役形 (させて)
@@ -96,7 +96,7 @@
 | **選項編號**    | **日文** | **中文** | 
 |----------|----------|------------|
 |1| まだきれになっていない  | 還沒弄乾淨   |
-|2|まだ乾いていない  | 還沒 | 
+|**2**|**まだ乾いていない**  | **還沒** | 
 |3| もうきれいになっている  |　已經很乾淨了  | 
 |4| もう乾いている| 已經乾了|
 
