--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -2,9 +2,11 @@
 
 - [題目](#題目)
     - [Day-1Q](#Day-1Q)
+    - [Day-2Q](#Day-2Q)
 
 - [解答](#解答)
     - [Day-1QA](#Day-1QA)
+    - [Day-2QA](#Day-2QA)
 
 ## 題目:
 
@@ -25,6 +27,25 @@
 3. もうきれいになっている
 4. もう乾いている
 
+
+
+### Day-2Q
+
+- とぼしい
+
+1. このスープは塩味がとぼしい。
+2. この国は天然資源にとぼしい。
+3. 音量がとぼしい聞こえにくい。
+4. この商品にはとぼしい需要しかない。
+
+- 矛盾
+
+1. 山田さんはみんなで決めたことに矛盾している。
+2. 北半球と南半球では夏と冬が矛盾している。
+3. あの人の言ったことは、この前の話と矛盾している。
+4. 穏やかな彼女がロックをきくなんで、矛盾している。
+
+---
 
 ## 解答:
 
@@ -103,4 +124,27 @@
 > 乾く（かわく）：　乾、冷淡、無感情<br>
 > 髪の毛が乾く(頭髮乾了)
 
+### Day-2A
 
+**ANS: 2,3** 
+- とぼしい
+
+> 貧困、貧乏
+
+| **選項編號**    | **日文** | **中文** |       
+|----------|----------|------------|
+|題目| とぼしい  | 貧困、貧乏      |      
+|1| このスープは塩味がうすい  | 這湯味道很淡(鹽放少了，不夠鹹) | 
+|**2**| **この国は天然資源（てんねんしげん）にとぼしい**| **這個國家缺乏自然資源** | 
+|3| 音量（おんりょう）が小さくて聞こえにくい |音量很小很難聽到  | 
+|4| この商品には少しい（すこしい）需要（じゅよう）しかない| 這個商品只有少量需求 |
+
+- 矛盾（むじゅん）
+> 矛盾
+
+| **選項編號**    | **日文** | **中文** | 
+|----------|----------|------------|
+|1| 山田さんはみんなで決めたことに反対している | 山田先生反對大家共同決定的事情。   |
+|2| 北半球（きたはんきゅう）と南半球（みなみはんきゅう）では夏と冬が逆く（ぎゃく）になる  | 在北半球和南半球，夏天和冬天是相反的。  | 
+|**3**|**あの人の言ったことは、この前の話と矛盾している**  | **那個人說的話和之前的說法相矛盾** |
+|4| 穏やか（おだやか）彼女がロックを聞くなんて、意外すぎてびっくりしたよ。| 穩重的她竟然聽搖滾音樂，真是太意外了，讓我大吃一驚。|
