--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -5,8 +5,8 @@
     - [Day-2Q](#Day-2Q)
 
 - [解答](#解答)
-    - [Day-1QA](#Day-1QA)
-    - [Day-2QA](#Day-2QA)
+    - [Day-1A](#Day-1A)
+    - [Day-2A](#Day-2A)
 
 ## 題目:
 
