--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -1,12 +1,7 @@
 # 目錄:
 
-- [題目](#題目)
-    - [Day-1Q](#Day-1Q)
-    - [Day-2Q](#Day-2Q)
-
-- [解答](#解答)
-    - [Day-1A](#Day-1A)
-    - [Day-2A](#Day-2A)
+- [Day-1Q](#Day-1Q)
+- [Day-2Q](#Day-2Q)
 
 ## 題目:
 
@@ -27,7 +22,7 @@
 3. もうきれいになっている
 4. もう乾いている
 
-
+## [解答](#Day-1A)
 
 ### Day-2Q
 
@@ -44,6 +39,8 @@
 2. 北半球と南半球では夏と冬が矛盾している。
 3. あの人の言ったことは、この前の話と矛盾している。
 4. 穏やかな彼女がロックをきくなんで、矛盾している。
+
+## [解答](#Day-2A)
 
 ---
 
