--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -22,7 +22,8 @@
 3. もうきれいになっている
 4. もう乾いている
 
-## [解答](#Day-1A)
+**[點我查看解答](#Day-1A)**
+
 
 ### Day-2Q
 
@@ -40,7 +41,7 @@
 3. あの人の言ったことは、この前の話と矛盾している。
 4. 穏やかな彼女がロックをきくなんで、矛盾している。
 
-## [解答](#Day-2A)
+**[點我查看解答](#Day-2A)**
 
 ---
 
