--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -1,7 +1,8 @@
 # 目錄:
 
-- [Day-1Q](#Day-1Q)
-- [Day-2Q](#Day-2Q)
+- [Day-1](#Day-1Q)
+- [Day-2](#Day-2Q)
+- [Day-3](#Day-2Q)
 
 ## 題目:
 
@@ -42,6 +43,26 @@ ___
 4. 穏やかな彼女がロックをきくなんで、矛盾している。
 
 **[點我查看解答](#Day-2A)**
+
+___
+
+### Day-3Q
+
+- 問い合わせる
+
+1. ご質問はこの電話番号にお問い合わせください。
+2. 街で知らない人に道をといあわせられた。
+3. 週末は映画を見に行かないかと、妹に問い合わせた。
+4. 言葉の正確な意味は辞書に問い合わせよう。
+
+- 交代
+
+1. 時計の電池が切れてしまったので、新しいのに交代した。
+2. 少し疲れたので、友達に運転を交代してもらった。
+3. 用事ができて、待ち合わせの時間を一時から三時に交代してもらった。
+4. 今年の四月に前の会社をやめて、今の会社に交代した。
+
+**[點我查看解答](#Day-3A)**
 
 ---
 
@@ -148,3 +169,29 @@ ___
 |2| 北半球（きたはんきゅう）と南半球（みなみはんきゅう）では夏と冬が逆く（ぎゃく）になる  | 在北半球和南半球，夏天和冬天是相反的。  | 
 |**3**|**あの人の言ったことは、この前の話と矛盾している**  | **那個人說的話和之前的說法相矛盾** |
 |4| 穏やか（おだやか）彼女がロックを聞くなんて、意外すぎてびっくりしたよ。| 穩重的她竟然聽搖滾音樂，真是太意外了，讓我大吃一驚。|
+
+___
+
+### Day-3A
+
+**ANS: 1,2** 
+- 問い合わせる
+
+> 詢問、打聽、諮詢、查詢
+
+| **選項編號**    | **日文** | **中文** |       
+|----------|----------|------------|
+|**1**| **ご質問（しつも）はこの電話番号（ばんごう）にお問い合わください。**| **如有任何問題，請聯絡此電話號碼。** |       
+|2| 街で知らない人に道を聞かれた。  | 在街上被陌生人問路。 | 
+|3| 週末（しゅうまつ）は映画を見に行かないかと、妹に問いた。 |我問了妹妹週末要不要去看電影。  | 
+|4| 言葉の正確（正確）な意味は辞書で引こう。| 詞語的正確意思要查字典。 |
+
+- 交代（こうたい）
+> 交替、輪流、替換
+
+| **選項編號**    | **日文** | **中文** | 
+|----------|----------|------------|
+|1| 時計の電池（でんち）が切れてしまったので、新しいのに交換した。 | 因為手錶的電池用完了，所以換了新的。。   |
+|**2**|**少し（すこし）疲れたので、友達に運転（うんてん）を交代してもらった。**  | **因為有點累了，所以請朋友替我開車。** |
+|3| 用事（ようじ）ができて、待ち合わせの時間（じかん）を一時から三時に変更してもらった。  | 因為臨時有事，我把碰面的時間從一點改到三點。  | 
+|4| 今年の四月に前の会社をやめて、今の会社に入社した。| 今年四月辭去了上一份工作，並入職了現在的公司。。|
