--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -51,7 +51,7 @@ ___
 - 問い合わせる
 
 1. ご質問はこの電話番号にお問い合わせください。
-2. 街で知らない人に道をといあわせられた。
+2. 街で知らない人に道を問い合わせられた。
 3. 週末は映画を見に行かないかと、妹に問い合わせた。
 4. 言葉の正確な意味は辞書に問い合わせよう。
 
