--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -3,6 +3,7 @@
 - [Day-1](#Day-1Q)
 - [Day-2](#Day-2Q)
 - [Day-3](#Day-3Q)
+- [Day-4](#Day-4Q)
 
 ## 題目:
 
@@ -63,6 +64,26 @@ ___
 4. 今年の四月に前の会社をやめて、今の会社に交代した。
 
 **[點我查看解答](#Day-3A)**
+
+---
+
+### Day-4Q
+
+- 合同
+
+1. 複数の大学が合同でスポーツ大会を行った。
+2. みんなの合同で、イベントの準備は着々と進んでいる。
+3. 三つの市の合同で、県で一番大きな市が誕生した。
+4. 寮ではみんなが合同でシャワールームを使っている。
+
+- `小川「ねえ、山田さん。昨日の夜、オリンピック中継見た？」<br>山田さん「ううん、昨日は残業で疲れちゃって。だから、夕飯（）食べないで寝ちゃったんだ。」`
+
+1. も
+2. が
+3. とは
+4. にまで
+
+**[點我查看解答](#Day-4A)**
 
 ---
 
@@ -175,6 +196,7 @@ ___
 ### Day-3A
 
 **ANS: 1,2** 
+
 - 問い合わせる
 
 > 詢問、打聽、諮詢、查詢
@@ -191,7 +213,36 @@ ___
 
 | **選項編號**    | **日文** | **中文** | 
 |----------|----------|------------|
-|1| 時計の電池（でんち）が切れてしまったので、新しいのに交換した。 | 因為手錶的電池用完了，所以換了新的。。   |
+|1| 時計の電池（でんち）が切れてしまったので、新しいのに交換した。 | 因為手錶的電池用完了，所以換了新的。   |
 |**2**|**少し（すこし）疲れたので、友達に運転（うんてん）を交代してもらった。**  | **因為有點累了，所以請朋友替我開車。** |
 |3| 用事（ようじ）ができて、待ち合わせの時間（じかん）を一時から三時に変更してもらった。  | 因為臨時有事，我把碰面的時間從一點改到三點。  | 
-|4| 今年の四月に前の会社をやめて、今の会社に入社した。| 今年四月辭去了上一份工作，並入職了現在的公司。。|
+|4| 今年の四月に前の会社をやめて、今の会社に入社した。| 今年四月辭去了上一份工作，並入職了現在的公司。|
+
+### Day-4A
+
+**ANS: 1,1** 
+
+- 合同（ごうどう）
+
+> 聯合 / 共同
+- 指多個個體或團體聯合起來，共同進行某個活動或事務。
+- 例如，公司之間的合作、聯合舉辦活動、共同運營等。
+
+| **選項編號**    | **日文** | **中文** |       
+|----------|----------|------------|
+|**1**| **複数（ふくすう）の大学が合同でスポーツ大会（たいかい）を行った。**| **多所大學聯合舉辦了體育大會。** |       
+|2| みんなの協力（きょうりょく）で、イベントの準備（じゅんび）は着々（ちゃくちゃく）と進んでいる。  | 在大家的協力下，活動的準備正在穩步進行。 | 
+|3| 三つの市の合併（がっぺい）で、県で一番大きな市が誕生した。 |　透過三個城市的合併，誕生了全縣最大的城市。 | 
+|4| 寮ではみんなが共同（きょうどう）でシャワールームを使っている。| 在宿舍裡，大家共同使用淋浴間。 |
+
+- `小川（おがわ）「ねえ、山田さん。昨日の夜。オリンピック中継（ちゅうけい）見た？<br>山田さん「ううん。昨日は残業（ざんぎょう）で疲れちゃって。だから、夕飯（）食べないで寝ちゃっだんだ。」`
+
+> `小川:「吶，山田，昨天晚上你看奧運轉播了嗎?」<br> 山田「沒有，昨天加班太累了，所以連飯也沒吃就直接睡了!」`
+
+| **選項編號**     | **日文**     |  **中文**               | **例句**                              |
+|-------------|----------|--------------------|-----------------------------------|
+| **1**           | **も**       | **強調: 連~ 也~**       | **私も行きます。（我也去。）**        |
+| 2           | が       | 用於標示主語或強調焦點 | 彼が学生です。（他是學生。）     |
+| 3           | とは     | 用於定義或解釋      | 自由とは何ですか。（自由是什麼？）|
+| 4           | にまで   | 直到~，達到~        | 駅にまで歩いて行きます。（我會走到車站。）|
+
