--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -232,7 +232,7 @@ ___
 | **選項編號**    | **日文** | **中文** |       
 |----------|----------|------------|
 |**1**| **複数（ふくすう）の大学が合同でスポーツ大会（たいかい）を行った。**| **多所大學聯合舉辦了體育大會。** |       
-|2| みんなの協力（きょうりょく）で、イベントの準備（じゅんび）は着々（ちゃくちゃく）と進んでいる。  | 在大家的協力下，活動的準備正在穩步進行。 | 
+|2| みんなの協力（きょうりょく）で、イベントの準備（じゅんび）は着々（ちゃくちゃく）と進んでいる。  | 在大家的協力下，活動的準備正在穩定進行。 | 
 |3| 三つの市の合併（がっぺい）で、県で一番大きな市が誕生した。 |　透過三個城市的合併，誕生了全縣最大的城市。 | 
 |4| 寮ではみんなが共同（きょうどう）でシャワールームを使っている。| 在宿舍裡，大家共同使用淋浴間。 |
 
