--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -236,8 +236,8 @@ ___
 |3| 三つの市の合併（がっぺい）で、県で一番大きな市が誕生した。 | 透過三個城市的合併，誕生了全縣最大的城市。 | 
 |4| 寮ではみんなが共同（きょうどう）でシャワールームを使っている。| 在宿舍裡，大家共同使用淋浴間。 |
 
-- 小川（おがわ）「ねえ、山田さん。昨日の夜。オリンピック中継（ちゅうけい）見た？
-  山田さん「ううん。昨日は残業（ざんぎょう）で疲れちゃって。だから、夕飯（）食べないで寝ちゃっだんだ。」
+-  小川「ねえ、山田さん。昨日の夜、オリンピック中継見た？」  
+   山田さん「ううん、昨日は残業で疲れちゃって。だから、夕飯（）食べないで寝ちゃったんだ。」
 
 > 小川:「吶，山田，昨天晚上你看奧運轉播了嗎?」<br>
   山田「沒有，昨天加班太累了，所以連飯也沒吃就直接睡了!」
