--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -4,6 +4,7 @@
 - [Day-2](#Day-2Q)
 - [Day-3](#Day-3Q)
 - [Day-4](#Day-4Q)
+- [Day-5](#Day-5Q)
 
 ## 題目:
 
@@ -85,6 +86,28 @@ ___
 4. にまで
 
 **[點我查看解答](#Day-4A)**
+
+---
+
+### Day-5Q
+
+- (広告で)
+  川西ビアノ教室では、初心者、経験者（）、どなたにでも丁寧に指導します。
+
+1. を通して。
+2. を問わず。
+3. にかけて。
+4. にもかかわらず。
+
+-  今日、子どもをきつくしかりすぎたので、気を付けようと思う。
+   ()、本人はそれほど気にしていないかもしれないが。
+
+1. そのかわり
+2. それなら
+3. もっとも
+4. しかも
+
+**[點我查看解答](#Day-5A)**
 
 ---
 
@@ -249,3 +272,33 @@ ___
 | 3           | とは     | 用於定義或解釋      | 自由とは何ですか。（自由是什麼？）|
 | 4           | にまで   | 直到~，達到~        | 駅にまで歩いて行きます。（我會走到車站。）|
 
+
+### Day-5A
+
+**ANS: 2,3** 
+
+- （広告（こうこく）で）
+   川西ビアノ教室では、初心者（しょしんしゃ）、経験者（けいけんしゃ）()、どなたにでも丁寧（ていねい）に指導（しどう）します。
+
+> (廣告)在川西鋼琴教室，( )是初學著還是有經驗的人，我們都會認真指導
+
+
+| **選項編號**    | **日文**                                                       | **中文**                                      | **例句**                                                     |
+|-----------------|-----------------------------------------------------------------|-----------------------------------------------|------------------------------------------------------------|
+| 1               | を通して（をとおして）                                           | 透過、藉由；從…的角度（時間、場所、方法等）   | このプロジェクトは多くの人を通して進められています。<br>（這個計劃是透過很多人推進的。） |
+| **2**           | **を問わず（をとわず）**                                         | **不論、無論；不受…的限制**                      | 川西ビアノ教室では、初心者、経験者を問わず、どなたにでも丁寧に指導します。<br>（在川西鋼琴教室，無論是初學著還是有經驗的人，我們都會認真指導） |
+| 3               | にかけて（にかけて）                                             | 在…方面；到…為止                             | この問題については、彼にかけては誰も敵わない。<br>（在這個問題上，沒有人能超越他。） |
+| 4               | にもかかわらず（にもかかわらず）                                 | 儘管、雖然；不顧                             | 雨にもかかわらず、イベントは予定通り行われました。<br>（儘管下雨，活動還是照常進行。） |
+
+-  今日、子どもをきつくしかりすぎたので、気を付けようと思う。
+   （）、本人はそれほど気にしていないかもしれないが。
+
+> 今天，我對孩子罵得太嚴厲了，所以我打算小心些。<br>
+  ()，本人可能並沒有那麼在意。
+
+| **選項編號** | **日文**       | **中文解釋**                                      | **例句**                                                       |
+|--------------|----------------|---------------------------------------------------|---------------------------------------------------------------|
+| 1            | そのかわり     | 代替；作為交換，表示承諾或補償                       | 彼は忙しいので、代わりに私が行きます。<br>（他很忙，所以我會代替他去。）  |
+| 2            | それなら       | 如果是那樣，表示根據前述情況的推測或條件              | それなら、今すぐに出発した方がいい。<br>（如果是那樣，最好現在就出發。）  |
+| **3**            | **もっとも**       | **不過；說到；其實，表示對某事的讓步或補充說明**                 | **もっとも、彼には少し無理かもしれません。<br>（今天，我對孩子罵得太嚴厲了，所以我打算小心些。不過，本人可能並沒有那麼在意。）**  |
+| 4            | しかも         | 而且，並且；表示接續的更強烈或意外的內容               | 彼は優れた歌手で、しかも作曲もできる。<br>（他不僅是個優秀的歌手，而且還能作曲。） |
