--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -286,7 +286,7 @@ ___
 | **選項編號**    | **日文**                                                       | **中文**                                      | **例句**                                                     |
 |-----------------|-----------------------------------------------------------------|-----------------------------------------------|------------------------------------------------------------|
 | 1               | を通して（をとおして）                                           | 透過、藉由；從…的角度（時間、場所、方法等）   | このプロジェクトは多くの人を通して進められています。<br>（這個計劃是透過很多人推進的。） |
-| **2**           | **を問わず（をとわず）**                                         | **不論、無論；不受…的限制**                      | 川西ビアノ教室では、初心者、経験者を問わず、どなたにでも丁寧に指導します。<br>（在川西鋼琴教室，無論是初學著還是有經驗的人，我們都會認真指導） |
+| **2**           | **を問わず（をとわず）**                                         | **不論、無論；不受…的限制**                      | **川西ビアノ教室では、初心者、経験者を問わず、どなたにでも丁寧に指導します。<br>（在川西鋼琴教室，無論是初學著還是有經驗的人，我們都會認真指導）** |
 | 3               | にかけて（にかけて）                                             | 在…方面；到…為止                             | この問題については、彼にかけては誰も敵わない。<br>（在這個問題上，沒有人能超越他。） |
 | 4               | にもかかわらず（にもかかわらず）                                 | 儘管、雖然；不顧                             | 雨にもかかわらず、イベントは予定通り行われました。<br>（儘管下雨，活動還是照常進行。） |
 
