--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -188,6 +188,7 @@ ___
 > 乾く（かわく）：　乾、冷淡、無感情<br>
 > 髪の毛が乾く(頭髮乾了)
 
+**[點我回去題目](#Day-1Q)**
 ___
 
 ### Day-2A
@@ -215,6 +216,7 @@ ___
 |**3**|**あの人の言ったことは、この前の話と矛盾している**  | **那個人說的話和之前的說法相矛盾** |
 |4| 穏やか（おだやか）彼女がロックを聞くなんて、意外すぎてびっくりしたよ。| 穩重的她竟然聽搖滾音樂，真是太意外了，讓我大吃一驚。|
 
+**[點我回去題目](#Day-2Q)**
 ___
 
 ### Day-3A
@@ -241,6 +243,9 @@ ___
 |**2**|**少し（すこし）疲れたので、友達に運転（うんてん）を交代してもらった。**  | **因為有點累了，所以請朋友替我開車。** |
 |3| 用事（ようじ）ができて、待ち合わせの時間（じかん）を一時から三時に変更してもらった。  | 因為臨時有事，我把碰面的時間從一點改到三點。  | 
 |4| 今年の四月に前の会社をやめて、今の会社に入社した。| 今年四月辭去了上一份工作，並入職了現在的公司。|
+
+**[點我回去題目](#Day-3Q)**
+___
 
 ### Day-4A
 
@@ -272,6 +277,8 @@ ___
 | 3           | とは     | 用於定義或解釋      | 自由とは何ですか。（自由是什麼？）|
 | 4           | にまで   | 直到~，達到~        | 駅にまで歩いて行きます。（我會走到車站。）|
 
+**[點我回去題目](#Day-4Q)**
+___
 
 ### Day-5A
 
@@ -302,3 +309,6 @@ ___
 | 2            | それなら       | 如果是那樣，表示根據前述情況的推測或條件              | それなら、今すぐに出発した方がいい。<br>（如果是那樣，最好現在就出發。）  |
 | **3**            | **もっとも**       | **不過；說到；其實，表示對某事的讓步或補充說明**                 | **もっとも、彼には少し無理かもしれません。<br>（今天，我對孩子罵得太嚴厲了，所以我打算小心些。不過，本人可能並沒有那麼在意。）**  |
 | 4            | しかも         | 而且，並且；表示接續的更強烈或意外的內容               | 彼は優れた歌手で、しかも作曲もできる。<br>（他不僅是個優秀的歌手，而且還能作曲。） |
+
+**[點我回去題目](#Day-5Q)**
+___
