--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -5,6 +5,7 @@
 - [Day-3](#Day-3Q)
 - [Day-4](#Day-4Q)
 - [Day-5](#Day-5Q)
+- [Day-6](#Day-6Q)
 
 ## 題目:
 
@@ -108,6 +109,27 @@ ___
 4. しかも
 
 **[點我查看解答](#Day-5A)**
+
+---
+
+### Day-6Q
+
+- 娘「なぞなぞです。お父さんが嫌いな果物は何でしょう。」
+  父「ううん、なんだろう。あ、そうか、（）。パパイヤだ。パパが嫌な果物ってことだよね。」
+
+1. わかった。
+2. わかったのに。
+3. わかってた。
+4. わかってね。
+
+-  この小説を読んで、友のためなら、自分はどうなったって（）という主人公の熱い思いに感動した。
+
+1. たまらない
+2. かまわない
+3. わけがない
+4. ならない
+
+**[點我查看解答](#Day-6A)**
 
 ---
 
@@ -311,4 +333,37 @@ ___
 | 4            | しかも         | 而且，並且；表示接續的更強烈或意外的內容               | 彼は優れた歌手で、しかも作曲もできる。<br>（他不僅是個優秀的歌手，而且還能作曲。） |
 
 **[點我回去題目](#Day-5Q)**
+___
+
+### Day-6A
+
+**ANS: 1,2** 
+
+- 娘「なぞなぞです。お父さん（おとうさん）が嫌いな果物は何でしょう。」
+  父「ううん、なんだろう。あ、そうか、（）。パパイヤだ。パパが嫌な果物ってことだよね。」
+
+> 女兒:「腦筋急轉彎，爸爸討厭的水果是什麼呢?」
+  父親:「嗯...是什麼呢?啊!()，是木瓜，爸爸討厭的水果(諧音)」
+
+
+| **選項編號** | **日文**           | **中文解釋**                      | **例句**                                                      |
+|--------------|--------------------|-----------------------------------|-------------------------------------------------------------|
+| **1**        | **わかった。**     | **明白了、了解了**              | **先生の説明を聞いて、わかった。<br>（聽了老師的說明，我明白了。）** |
+| 2            | わかったのに。     | 明明知道了，但……                  | もうわかったのに、また同じことを言われた。<br>（明明已經知道了，卻又被說了一遍。） |
+| 3            | わかってた。       | 原來知道、早就明白                 | 彼が嘘をついていることは、最初からわかってた。<br>（他在撒謊這件事，我一開始就知道了。） |
+| 4            | わかってね。       | 請明白哦、記住哦（帶有提醒或囑咐的語氣） | 明日が休みだって、ちゃんとわかってね。<br>（明天放假，記得哦。） |
+
+
+-  この小説（しょうせつ）を読んで、友（とも）のためなら、自分はどうなったって（）という主人公の熱い思いに感動した。
+
+> 讀了這本小說，我被主人公那種為了朋友兩肋插刀(自己怎樣都無所謂)的熱情所感動。
+
+| **選項編號** | **日文**           | **中文解釋**                                    | **例句**                                                      |
+|--------------|--------------------|------------------------------------------------|-------------------------------------------------------------|
+| 1            | たまらない         | 無法忍受、極為…（情感或感覺強烈）                | 暑くてたまらない。<br>（熱得讓人無法忍受。）                 |
+| **2**        | **かまわない**     | **不在意、沒關係**                             | **少し遅れてもかまわない。<br>（稍微遲到也沒關係。）**            |
+| 3            | わけがない         | 不可能、不會…                                  | こんなに簡単な問題、わけがないよ。<br>（這麼簡單的問題，不可能不會。） |
+| 4            | ならない           | 不行、無法忍受；不得不…                        | 人の悪口を言うのは許されることではならない。<br>（說別人壞話是絕對不行的。） |
+
+**[點我回去題目](#Day-6Q)**
 ___
