--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -114,8 +114,8 @@ ___
 
 ### Day-6Q
 
-- 娘「なぞなぞです。お父さんが嫌いな果物は何でしょう。」
-  父「ううん、なんだろう。あ、そうか、（）。パパイヤだ。パパが嫌な果物ってことだよね。」
+-  娘「なぞなぞです。お父さんが嫌いな果物は何でしょう。」
+   父「ううん、なんだろう。あ、そうか、（）。パパイヤだ。パパが嫌な果物ってことだよね。」
 
 1. わかった。
 2. わかったのに。
@@ -339,11 +339,11 @@ ___
 
 **ANS: 1,2** 
 
-- 娘「なぞなぞです。お父さん（おとうさん）が嫌いな果物は何でしょう。」
-  父「ううん、なんだろう。あ、そうか、（）。パパイヤだ。パパが嫌な果物ってことだよね。」
+-  娘「なぞなぞです。お父さん（おとうさん）が嫌いな果物は何でしょう。」
+   父「ううん、なんだろう。あ、そうか、（）。パパイヤだ。パパが嫌な果物ってことだよね。」
 
-> 女兒:「腦筋急轉彎，爸爸討厭的水果是什麼呢?」
-  父親:「嗯...是什麼呢?啊!()，是木瓜，爸爸討厭的水果(諧音)」
+>  女兒:「腦筋急轉彎，爸爸討厭的水果是什麼呢?」<br>
+   父親:「嗯...是什麼呢?啊!()，是木瓜，爸爸討厭的水果(諧音)」
 
 
 | **選項編號** | **日文**           | **中文解釋**                      | **例句**                                                      |
