--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -114,7 +114,7 @@ ___
 
 ### Day-6Q
 
--  娘「なぞなぞです。お父さんが嫌いな果物は何でしょう。」
+-  娘「なぞなぞです。お父さんが嫌いな果物は何でしょう。」<br>
    父「ううん、なんだろう。あ、そうか、（）。パパイヤだ。パパが嫌な果物ってことだよね。」
 
 1. わかった。
@@ -339,7 +339,7 @@ ___
 
 **ANS: 1,2** 
 
--  娘「なぞなぞです。お父さん（おとうさん）が嫌いな果物は何でしょう。」
+-  娘「なぞなぞです。お父さん（おとうさん）が嫌いな果物は何でしょう。」<br>
    父「ううん、なんだろう。あ、そうか、（）。パパイヤだ。パパが嫌な果物ってことだよね。」
 
 >  女兒:「腦筋急轉彎，爸爸討厭的水果是什麼呢?」<br>
