--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -6,6 +6,7 @@
 - [Day-4](#Day-4Q)
 - [Day-5](#Day-5Q)
 - [Day-6](#Day-6Q)
+- [Day-7](#Day-7Q)
 
 ## 題目:
 
@@ -130,6 +131,27 @@ ___
 4. ならない
 
 **[點我查看解答](#Day-6A)**
+
+---
+
+### Day-7Q
+
+-  わたしたちが旅館に着くと、従業員たちが笑顔で「ようこそ（）。」
+
+1. お越しくださいました。
+2. お伺いしました。
+3. お呼びいただきました。
+4. お迎えしました。
+
+-  A「次の登山、大山に登るのはどう?」<br>
+   B「大山は三年前に一度（）から、ほかの山がいいなあ。」
+
+1. 登ってみる
+2. 登ってくる
+3. 登っていく
+4. 登っている
+
+**[點我查看解答](#Day-7A)**
 
 ---
 
@@ -366,4 +388,39 @@ ___
 | 4            | ならない           | 不行、無法忍受；不得不…                        | 人の悪口を言うのは許されることではならない。<br>（說別人壞話是絕對不行的。） |
 
 **[點我回去題目](#Day-6Q)**
+___
+
+### Day-7A
+
+**ANS: 1,1** 
+
+-  わたしたちが旅館に着くと、従業員（じゅうぎょういん）たちが笑顔で「ようこそ（）」
+
+>  當我們抵達旅館時，員工們面帶笑容地說：「歡迎光臨！」
+
+
+| **選項編號** | **日文**                               | **中文解釋**                         | **例句**                                                      |
+|--------------|----------------------------------------|--------------------------------------|-------------------------------------------------------------|
+| **1**        | **お越しください （おこしください）**      | **請光臨；請蒞臨**                      | **次回もぜひお越しください。<br>（下次請一定再光臨。）**             |
+| 2            | お伺いしました（おうかがいしました）   | 拜訪了（謙遜語）                     | 先ほどご自宅にお伺いしました。<br>（剛剛拜訪了您的住所。）      |
+| 3            | お呼びいただきました（およびいただきました） | 承蒙邀請（謙遜語）                   | この場にお呼びいただき、ありがとうございます。<br>（感謝您邀請我到這裡。） |
+| 4            | お迎えしました                         | 迎接了；接待了                       | お客様を駅までお迎えしました。<br>（到車站迎接了客人。）         |
+
+
+
+-  A「次（つぎ）の登山（とざん）、大山に登るのはどう？」<br>
+   B「大山は三年前に一度（）から、ほかの山がいいなあ。」
+
+>  A：「下一次登山，去爬大山怎麼樣？」<br>
+   B：「大山三年前我曾經嘗試爬過一次，還是爬其他的山比較好。」
+
+| **選項編號** | **日文**          | **中文解釋**                            | **例句**                                                      |
+|--------------|-------------------|-----------------------------------------|-------------------------------------------------------------|
+| **1**            | **登ってみる**        | **試著爬上去**                              | **この山に一度登ってみたいです。<br>（我想試著爬一次這座山。）**   |
+| 2        | 登ってくる        | 爬上來（接近說話者的方向）              | 彼が山の頂上から登ってきました。<br>（他從山頂爬上來了。）    |
+| 3            | 登っていく        | 爬上去（遠離說話者的方向）              | 私たちは次の山に登っていきます。<br>（我們會爬上下一座山。）  |
+| 4            | 登っている        | 正在爬；處於爬的狀態                    | 今、彼は険しい山を登っているところです。<br>（他現在正在爬一座險峻的山。） |
+
+
+**[點我回去題目](#Day-7Q)**
 ___
