--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -392,7 +392,7 @@ ___
 
 ### Day-7A
 
-**ANS: 1,1** 
+**ANS: 1,4** 
 
 -  わたしたちが旅館に着くと、従業員（じゅうぎょういん）たちが笑顔で「ようこそ（）」
 
@@ -416,11 +416,14 @@ ___
 
 | **選項編號** | **日文**          | **中文解釋**                            | **例句**                                                      |
 |--------------|-------------------|-----------------------------------------|-------------------------------------------------------------|
-| **1**            | **登ってみる**        | **試著爬上去**                              | **この山に一度登ってみたいです。<br>（我想試著爬一次這座山。）**   |
+| 1            | 登ってみる        | 試著爬上去                              | この山に一度登ってみたいです。<br>（我想試著爬一次這座山。）  |
 | 2        | 登ってくる        | 爬上來（接近說話者的方向）              | 彼が山の頂上から登ってきました。<br>（他從山頂爬上來了。）    |
 | 3            | 登っていく        | 爬上去（遠離說話者的方向）              | 私たちは次の山に登っていきます。<br>（我們會爬上下一座山。）  |
-| 4            | 登っている        | 正在爬；處於爬的狀態                    | 今、彼は険しい山を登っているところです。<br>（他現在正在爬一座險峻的山。） |
+| **4**            | **登っている**        | **正在爬；處於爬的狀態**                    | **今、彼は険しい山を登っているところです。<br>（他現在正在爬一座險峻的山。）** |
 
+> 「登っている」表示一個持續或經歷過的狀態，特別是描述過去某個行為的結果對現在有影響。在這裡，B在表達他/她三年前爬過大山，這是個經歷過的動作，並且這個經歷對現在有影響，讓他/她不想再爬大山。<br>
+> 登ってみる（試著爬）通常用於描述某人嘗試過某事，但在這裡不太適合，因為 B 是在說三年前爬過，而不是「嘗試」再爬一次。<br>
+> 使用「登っている」強調了過去的動作對現在的影響，這與句子的語境相符。
 
 **[點我回去題目](#Day-7Q)**
 ___
