更新每日兩題

--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -7,6 +7,7 @@
 - [Day-5](#Day-5Q)
 - [Day-6](#Day-6Q)
 - [Day-7](#Day-7Q)
+- [Day-8](#Day-8Q)
 
 ## 題目:
 
@@ -152,6 +153,26 @@ ___
 4. 登っている
 
 **[點我查看解答](#Day-7A)**
+
+---
+
+### Day-8Q
+
+-  日本の人気バンド「Z」は、ヨーロッパでコンサートを行うなど、活動を世界（）広げている。
+
+1. でと
+2. へと
+3. からも
+4. ほども
+
+-  パソコン教室の講師に（）、人に教えるのは難しいけど、楽しいということがわかりました。
+
+1. なったかぎり
+2. したかぎり
+3. したあかげで
+4. なったおかげで
+
+**[點我查看解答](#Day-8A)**
 
 ---
 
@@ -426,4 +447,40 @@ ___
 > 使用「登っている」強調了過去的動作對現在的影響，這與句子的語境相符。
 
 **[點我回去題目](#Day-7Q)**
+___
+
+### Day-8A
+
+**ANS: 2,4** 
+
+-  日本の人気（にんき）バンド「Z」は、ヨーロッパでコンサートを行うなど、活動（かつどう）を世界（せかい）（）広げている。
+
+>  日本的熱門樂隊「Z」在歐洲舉行演唱會等活動，正將其活動拓展到世界各地。
+
+
+| **選項編號** | **日文**   | **意思解釋**                                               | **例句**                                                                                 |
+|--------------|------------|------------------------------------------------------------|------------------------------------------------------------------------------------------|
+| 1        | でと   | 用於表示某動作或狀態的範圍或方向，與「で」的意思相似，但強調轉變或結果。    | 日本語を学ぶために、海外で生活を始めることにした。 (為了學日語，我決定開始在國外生活。)          |
+| **2**        | **へと**  | **表示「朝向某個方向」，用來表示目的地、方向或範圍的擴展。**               | **日本の人気バンド「Z」は、ヨーロッパでコンサートを行うなど、活動を世界へと広げている。 (日本的熱門樂隊「Z」在歐洲舉行演唱會等活動，正將其活動拓展到世界各地。)** |
+| 3        | からも | 表示除了某個地方或事物之外，還有其他的事物或情況。                        | 彼は英語だけでなく、フランス語からも話せます。 (他不僅會說英語，還會說法語。)                      |
+| 4       | ほども | 表示程度、範圍的強調，常用於表示不至於達到某種極端或過度的情況。            | 彼女はその問題に対して、ほども大きな反応を示さなかった。 (她對這個問題並未表現出過度的反應。)         |
+
+> 「世界へと広げている」表示「向世界擴展」，這裡「へと」表示「朝向某個方向」的意思。
+
+
+-  パソコン教室の講師（こうし）に（）、人に教えるのは難しいけど、楽しいということがわかりました。
+
+>  多虧成為了電腦教室的講師，我明白了教人很難，但也很有趣。
+
+| **選項編號** | **日文**          | **解釋**                            | **例句**                                                      |
+|--------------|-------------------|--------------------------------------|-------------------------------------------------------------|
+| 1            | なったかぎり      | 表示在某種情況下，某事達到某種狀態或限度。通常用來表示「在這種情況下」，多用於「限度」或「條件」方面。 | 日本に行ったかぎり、観光地を全部見て回りました。 (只要到了日本，就參觀了所有的旅遊景點。) |
+| 2            | したかぎり        | 表示做過某事的情況下，某結果或狀態。                                         | 覚えたかぎり、試験は簡単でした。 (就我記得的，考試很簡單。)               |
+| 3            | したおかげで       | 表示「因為做了某事」，帶來了某種結果，常帶有感謝或正面的結果。                     | 努力したおかげで、試験に合格しました。 (多虧努力，我通過了考試。)       |
+| **4**        |  **なったおかげで**     | **表示因為某事變化或達成，帶來了某個結果。常帶有「感謝」的語氣。**                    | **講師になったおかげで、多くの人と出会いました。 (因為成為了講師，我遇到了很多人。)**  |
+
+>  「なったおかげで」表示由於某事的結果，帶來了某個正面的結果。在這個情境中，講師成為了講師之後，才明白教人是難的但有趣，所以使用「なったおかげで」。
+
+
+**[點我回去題目](#Day-8Q)**
 ___
