--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -463,7 +463,7 @@ ___
 | 1        | でと   | 用於表示某動作或狀態的範圍或方向，與「で」的意思相似，但強調轉變或結果。    | 日本語を学ぶために、海外で生活を始めることにした。 (為了學日語，我決定開始在國外生活。)          |
 | **2**        | **へと**  | **表示「朝向某個方向」，用來表示目的地、方向或範圍的擴展。**               | **日本の人気バンド「Z」は、ヨーロッパでコンサートを行うなど、活動を世界へと広げている。 (日本的熱門樂隊「Z」在歐洲舉行演唱會等活動，正將其活動拓展到世界各地。)** |
 | 3        | からも | 表示除了某個地方或事物之外，還有其他的事物或情況。                        | 彼は英語だけでなく、フランス語からも話せます。 (他不僅會說英語，還會說法語。)                      |
-| 4       | ほども | 表示程度、範圍的強調，常用於表示不至於達到某種極端或過度的情況。            | 彼女はその問題に対して、ほども大きな反応を示さなかった。 (她對這個問題並未表現出過度的反應。)         |
+| 4       | ほども | 表示程度、範圍的強調，常用於表示不至於達到某種極端或過度的情況。            | 彼女はその問題に対して、ほども大きな反応（はんのう） を 示さ（しめさ）なかった。 (她對這個問題並未表現出過度的反應。)         |
 
 > 「世界へと広げている」表示「向世界擴展」，這裡「へと」表示「朝向某個方向」的意思。
 
