更新每日兩題

--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -8,6 +8,7 @@
 - [Day-6](#Day-6Q)
 - [Day-7](#Day-7Q)
 - [Day-8](#Day-8Q)
+- [Day-9](#Day-9Q)
 
 ## 題目:
 
@@ -172,7 +173,25 @@ ___
 3. したあかげで
 4. なったおかげで
 
-**[點我查看解答](#Day-8A)**
+**[點我查看解答](#Day-9A)**
+
+### Day-9Q
+
+-  だれだって、失敗もするし、（）やれないときもある。
+
+1. やるなと言われたことが
+2. やるなと言われたのは
+3. やらなくてはいけないことが
+4. やらなくてはならないのは
+
+-  内容がわからない話を長時間（）、大人だって耐えられないことでしょう。
+
+1. 聞かなくていいとしたら
+2. 聞かなければならないことで
+3. 聞かなければならないとしたら
+4. 聞かなくていいことで
+
+**[點我查看解答](#Day-9A)**
 
 ---
 
@@ -483,4 +502,44 @@ ___
 
 
 **[點我回去題目](#Day-8Q)**
+___
+
+### Day-9A
+
+**ANS: 3,3** 
+
+-  だれだって、失敗（しっぱい）もするし、（）やれないときもある。
+
+>  誰都會有失敗的時候，也會有必須做的事情做不到的時候。
+
+
+
+| **選項編號** | **日文**                      | **意思解釋**                                               | **例句（含中文解釋）**                                                                      |
+|--------------|-------------------------------|------------------------------------------------------------|-------------------------------------------------------------------------------------------|
+| 1            | やるなと言われたことが         | 被告知不要做的事情                                         | 親にやるなと言われたことが、実は自分にとって大切な経験だった。<br>（被父母說不要做的事，實際上對自己是重要的經驗。） |
+| 2            | やるなと言われたのは           | 被告知不要做的是...                                      | やるなと言われたのは、試験の前にゲームをすることだ。<br>（被告知不要做的是，考試前玩遊戲。） |
+| **3**        | **やらなくてはいけないことが** | **必須要做的事情是...**                                     | **やらなくてはいけないことが多すぎて、どこから始めればいいか分からない。<br>（要做的事情太多，不知道該從哪裡開始。）** |
+| 4            | やらなくてはならないのは       | 必須要做的是...                                             | やらなくてはならないのは、今日中にレポートを完成させることだ。<br>（必須要做的是，今天之內完成報告。） |
+
+
+> 「世界へと広げている」表示「向世界擴展」，這裡「へと」表示「朝向某個方向」的意思。
+
+
+-  内容（ないよう）がわからない話を長時間（ちょうじかん）（）、大人（おとな）だって耐えられないことでしょう。
+
+>  如果必須長時間聽不明白內容的話，就算是大人也無法忍受吧。
+
+
+| **選項編號** | **日文**                  | **解釋**                                   | **例句（含中文解釋）**                                                                    |
+|--------------|---------------------------|-------------------------------------------|-----------------------------------------------------------------------------------------|
+| 1            | 聞かなくていいとしたら     | 如果不需要聽的話                           | 聞かなくていいとしたら、もっと気楽に過ごせるのに。<br>（如果不需要聽的話，生活會輕鬆很多。） |
+| 2            | 聞かなければならないことで | 必須要聽的事情                             | 聞かなければならないことで、重要な内容がたくさんある。<br>（必須要聽的事情有很多重要的內容。） |
+| **3**        | **聞かなければならないとしたら** | **如果必須要聽的話**                       | **聞かなければならないとしたら、しっかり準備してから対応するべきだ。<br>（如果必須要聽的話，就應該先做好充分準備再應對。）** |
+| 4            | 聞かなくていいことで       | 不需要聽的事情                             | 聞かなくていいことで、わざわざ説明する必要はない。<br>（不需要聽的事情，就沒必要特意去解釋。） |
+
+
+>  「なったおかげで」表示由於某事的結果，帶來了某個正面的結果。在這個情境中，講師成為了講師之後，才明白教人是難的但有趣，所以使用「なったおかげで」。
+
+
+**[點我回去題目](#Day-9Q)**
 ___
