更新每日兩題

--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -9,6 +9,7 @@
 - [Day-7](#Day-7Q)
 - [Day-8](#Day-8Q)
 - [Day-9](#Day-9Q)
+- [Day-10](#Day-10Q)
 
 ## 題目:
 
@@ -195,6 +196,28 @@ ___
 
 ---
 
+### Day-10Q
+
+-  （本屋で）<br>
+   A「あ、この本、面白いよ。」<br>
+   B「どんな話？」<br>
+   A「主人公と恋人が、親に無理やり（）話なんだけど、すごくどきどきするんだ。」
+
+1. 別れそうになる
+2. 別れられそうになる
+3. 別れさせそうになる
+4. 別れさせられそうになる
+
+- 「わたし、辛いものを食べると、＿　＿　＿　＿　せきが出るんです。」
+
+1. ほど
+2. 必ず
+3. いい
+4. といって
+
+**[點我查看解答](#Day-10A)**
+
+---
 ## 解答:
 
 ### Day-1A
@@ -537,4 +560,40 @@ ___
 
 
 **[點我回去題目](#Day-9Q)**
+___
+
+### Day-10A
+
+**ANS: 4,2431** 
+
+-  （本屋で）<br>
+   A「あ。この本、面白いよ。」
+   B「どんな話？」
+   A「主人公（しゅじんこう）と恋人（こいびと）が、親に無理やり（）話なんだけど。すごくどきどきするんだ。」
+
+>  (在書店)<br>
+   A：「啊，這本書很有趣哦。」<br>
+   B：「是什麼樣的故事？」<br>
+   A：「主人公和戀人被父母強行分開的故事，非常讓人心跳加速呢。」
+
+
+
+
+| **選項編號** | **日文**                      | **意思解釋**                                               | **例句（含中文解釋）**                                                                      |
+|--------------|-------------------------------|------------------------------------------------------------|-------------------------------------------------------------------------------------------|
+| 1            | 別（わか）れそうになる        | 好像要分開了                                                | 二人は喧嘩して、別れそうになった。<br>（兩人吵架了，似乎要分手了。）                      |
+| 2            | 別れられそうになる            | 好像要被迫分開                                              | 事情が悪化して、別れられそうになった。<br>（情況惡化了，似乎要被迫分開。）                |
+| 3        | 別れさせそうになる        | 似乎要讓別人分開                                        | 彼は噂を広めて、二人を別れさせそうになった。<br>（他散播謠言，似乎要讓兩人分手了。）   |
+| **4**           | **別れさせられそうになる**        | **似乎要被迫讓別人分開**                                         | **噂のせいで、二人を別れさせられそうになった。<br>（因為謠言，似乎要被迫讓兩人分手了。）**    |
+
+
+
+-  「わたし、辛いものを食べると、＿　＿　＿　＿　せきが出るんです。」
+
+> 「我吃辣的東西時，幾乎一定會咳嗽。」
+
+> 必ず（かならず）といっていいほど： 幾乎一定
+
+
+**[點我回去題目](#Day-10Q)**
 ___
