--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -567,8 +567,8 @@ ___
 **ANS: 4,2431** 
 
 -  （本屋で）<br>
-   A「あ。この本、面白いよ。」
-   B「どんな話？」
+   A「あ。この本、面白いよ。」<br>
+   B「どんな話？」<br>
    A「主人公（しゅじんこう）と恋人（こいびと）が、親に無理やり（）話なんだけど。すごくどきどきするんだ。」
 
 >  (在書店)<br>
