--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -10,6 +10,7 @@
 - [Day-8](#Day-8Q)
 - [Day-9](#Day-9Q)
 - [Day-10](#Day-10Q)
+- [Day-11](#Day-11Q)
 
 ## 題目:
 
@@ -216,6 +217,31 @@ ___
 4. といって
 
 **[點我查看解答](#Day-10A)**
+
+---
+
+### Day-11Q
+
+-  （学校の正門で）<br>
+   A「みんないますか。」<br>
+   B「田中さんがいません。」<br>
+   A「授業のあと＿　＿　＿　＿　のかな。」
+
+1. なっていたのに
+2. 一人で行っちゃった
+3. ここで待ち合わせて
+4. 一緒に行くことに
+
+-  A「あ、今から行く博物館、一週間前に予約してないと入れないってガイドブックに書いてあるよ。」<br>
+   B「え、そうなの？困ったなあ。」<br>
+   A「行く＿　＿　＿　＿　みようか。」
+
+1. 行って
+2. だけ
+3. 交渉して
+4. 入れてもらえない
+
+**[點我查看解答](#Day-11A)**
 
 ---
 ## 解答:
@@ -596,4 +622,40 @@ ___
 
 
 **[點我回去題目](#Day-10Q)**
+___
+
+### Day-11A
+
+**ANS: 3412,2143** 
+
+-  （学校の正門（せいもん）で）<br>
+   A「みんないますか。」<br>
+   B「田中さんがいません。」<br>
+   A「授業（じゅぎょう）のあと、ここで待ち合わせて 一緒に行くことのに　一人で行っちゃったのかな。　」
+
+>  A：「大家都在嗎？」<br>
+   B：「田中同學不在。」<br>
+   A：「是不是下課後本來約好在這裡集合一起去，但他卻自己一個人先走了呢？」
+
+
+
+-  A「あ、今から行く博物館（はくぶつかん）、一週間（いっしゅうかん）前に予約してないと入れないってガイドブックに書いてあるよ。」<br>
+   B「え、そうなの？困ったなあ。」<br>
+   A「行くだけ行っては入れてもらえない交渉してみようか。」
+
+> A：「啊，我們要去的博物館，導覽手冊上說必須提前一週預約才能進去。」<br>
+  B：「咦，真的嗎？那就麻煩了。」<br>
+  A：「要不我們就先去試試看，說不定能協商進去呢。」
+
+**動詞辭書形 + だけ + 動詞て形**
+
+- 重複動詞：
+   - 當同一動詞的辭書形和て形結合使用時，往往帶有「儘管預期不確定，但仍然先去做某件事」的含義。
+   - 例子中，「行くだけ行って」意指「去就去吧，試著去看看，無論結果如何」。
+
+- だけ的功能：
+   - だけ 表示「只、僅」，強調不帶過多期待的嘗試行動。
+
+
+**[點我回去題目](#Day-11Q)**
 ___
