更新每日兩題

--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -11,6 +11,7 @@
 - [Day-9](#Day-9Q)
 - [Day-10](#Day-10Q)
 - [Day-11](#Day-11Q)
+- [Day-12](#Day-12Q)
 
 ## 題目:
 
@@ -244,6 +245,29 @@ ___
 **[點我查看解答](#Day-11A)**
 
 ---
+
+### Day-12Q
+
+-  （電話で）<br>
+   A「すみません、来週の2時からの会議ですが、その時間、別の用件が入ってしまいます…。もしそちらのご都合が＿　＿　＿　＿、いかがでしょうか」<br>
+   B「こちらは大条文ですよ。」
+
+1. ありがたいんですが
+2. 変更していただけると
+3. 4時以降に
+4. よろしければ
+
+-  このコンサートの警備には、警備員＿　＿　＿　＿十分です。
+
+1. いれば
+2. も
+3. が
+4. 20人
+
+**[點我查看解答](#Day-12A)**
+
+---
+
 ## 解答:
 
 ### Day-1A
@@ -658,4 +682,26 @@ ___
 
 
 **[點我回去題目](#Day-11Q)**
+___
+
+### Day-12A
+
+**ANS: 4321,3421** 
+
+-  （電話で）<br>
+   A「すみません、来週（らいしゅう）の2時からの会議ですが、その時間（じかん）、別に用件（ようけん）が入ってしまいまして…。もしそちらのご都合（つごう）がよしければ4時以降（いこう）に変更（へんこう）していただけるとありがたいですが、いかがでしょうか。」<br>
+   B「こちらは大丈夫（だいじょうぶ）ですよ。」
+
+> （在電話中）<br>
+>  A：「不好意思，下週2點的會議，我臨時有其他事情。如果您那邊方便的話，能將時間改到4點以後嗎？不知道這樣可以嗎？」<br>
+>  B：「我們這邊沒問題哦。」
+
+
+
+-  このコンサートの警備（けいび）には、警備員（けいびいん）が20人もいれば十分（じゅうぶん）です。<br>
+
+> 這場音樂會的警備，只要有20名警衛就足夠了。
+
+
+**[點我回去題目](#Day-12Q)**
 ___
