--- a/日文檢定/每日兩題.md
+++ b/日文檢定/每日兩題.md
@@ -12,6 +12,7 @@
 - [Day-10](#Day-10Q)
 - [Day-11](#Day-11Q)
 - [Day-12](#Day-12Q)
+- [Day-13](#Day-13Q)
 
 ## 題目:
 
@@ -265,6 +266,26 @@ ___
 4. 20人
 
 **[點我查看解答](#Day-12A)**
+
+---
+
+### Day-13Q
+
+-  田中さんの話は**抽象的**で分かりにくかった。
+
+1. ちゅうしょうてき
+2. ちゅうぞうてき
+3. ゆうしょうてき
+4. ゆうぞうてき
+
+-  その本は、明日までに必ず**返却**してください。
+
+1. へんきょく
+2. へんきゃ
+3. へんきゃく
+4. へんきょ
+
+**[點我查看解答](#Day-13A)**
 
 ---
 
@@ -704,4 +725,37 @@ ___
 
 
 **[點我回去題目](#Day-12Q)**
+___
+
+### Day-13A
+
+**ANS: 1,3** 
+
+-  田中さんの話は抽象的（ちゅうしょうてき）で分かりにくかった。
+
+> 田中先生說話抽象難懂。<br>
+
+| **選項編號** | **詞彙**       | **讀音**      | **意思**                              | **例句**                                                     |
+|--------------|-----------------|---------------|---------------------------------------|--------------------------------------------------------------|
+| **1**      | **抽象的**         | **ちゅうしょうてき** | **抽象的，指不具體、概念性的事物或描述**     | **この絵はとても抽象的です。<br>（這幅畫非常抽象。）**           |
+| 2           | 彫像的         | ちゅうぞうてき | 與雕像相關，形容某物如同雕像般具象或穩定 | そのポーズは彫像的な美しさを持っています。<br>（那個姿勢具有雕像般的美感。） |
+| 3       | 雄壮的         | ゆうそうてき    | 雄壯的、宏偉的                         | 雄壮的な風景に感動しました。<br>（被雄壯的景色所感動。）     |
+| 4 | 雄像的         | ゆうぞうてき    | 像雄性形象般的某種特徵                 | その作品は雄像的な力強さが特徴です。<br>（那個作品以雄性形象般的力量感為特點。） |
+
+
+-  その本は、明日までに必ず（かならず）返却（へんきゃく）してください。
+
+> 那本書請務必在明天歸還。
+
+| **選項編號** | **詞彙**       | **讀音**      | **意思**                              | **例句**                                                     |
+|--------------|-----------------|---------------|---------------------------------------|--------------------------------------------------------------|
+| 1           | 返却（誤讀）    | へんきょく    | 「返却」的誤讀，正確讀音應為「へんきゃく」 | 無適用例句                                                   |
+| 2            | 偏狭           | へんきゃ      | 狹隘、偏狹                            | 偏狭な考え方はよくありません。<br>（狹隘的想法是不好的。）    |
+| **3**            | **返却**           | **へんきゃく**    | **歸還、返還**                            | **本を図書館に返却しました。<br>（已經把書還給圖書館了。）**      |
+| 4            | 辺境           | へんきょう    | 邊境、偏遠地區                        | 辺境の村での生活は大変です。<br>（在偏遠村莊的生活很艱難。）  |
+
+
+
+
+**[點我回去題目](#Day-13Q)**
 ___
