--- a/日文檢定/聽力測驗.md
+++ b/日文檢定/聽力測驗.md
@@ -1,11 +1,11 @@
 # 目錄
 - [日文](#日文)
-  - [2024 07](#2024-07)
+  - [2024 07 cn](#2024-07-cn)
 - [中文](#中文)
-  - [2024 07](#2024-07)
+  - [2024 07 en](#2024-07-en)
 
 # 日文
-## 2024 07
+## 2024 07 cn
 
 ### 第一題
 スーパーでアルバイトの男の人と店長が話しています。アルバイトの男の人はこの後まず、何をしなければなりませんか。
@@ -34,10 +34,33 @@
 
 ３．パンに値引きシールは貼る　４．棚の商品を片付ける
 
+### 第二題
+
+お菓子の会社で女の人と課長が話しています。女の人は会議の資料をどのように直しますか。
+
+女：課長、明日の会議の資料、新商品「やわらかせんべい」のパッケージのデザイン案を表紙に載せました。こちらは高齢者を主なターグットにした商品です。
+
+男：ああ、　資料の表紙に候補のデザイン案を三つ並べてくれたんだね。同じデザインで赤、青、茶の色違いの三種類。赤を大きくしているのはどうして？
+
+女：はい。先週の会議でご報告した通り、ネットで消費者へアンケートをした結果、総合的に赤を基調にした案が一番好評だったということだ。
+
+男：そうだったね。総合的には赤が一番好評だったけど、確か、年代によって好みがけっこう分かれてたよね。今回の会議資料、年代説明の回答のデータはどこに載せてある？
+
+女：商品説明の後です。
+
+男：あ、グラフも載せてあるね。グラフの色ははっきりしてて見やすいと思うよ。パッケージはターゲットの高齢者には赤より茶色が人気なんだ。会議でもみんなの意見を聞く必要があるから、そうだな、この最初の三つのデザイン案、大きさに差をつけないでおいてもらえるかな？
+
+女：わかりました。
+
+男：年代別の回答のデータは資料の順を入れ替えて、商品説明の前で見せてもよさそうだけど、とりあえずはこのままで。
+
+女の人は会議の資料はどのように直しますか。
+１．すべてのデザイン案を削除する　　  ２．すべてのデザイン案のサイズをそろえる。
+３．年代別の回答のグラフの色変える　  ４．年代別の回答のデータの位置を変える
 ---
 
 # 中文
-## 2024 07
+## 2024 07 en
 
 ### 第一題
 超市裡，打工的男生和店長正在對話。這位打工的男生接下來最先需要做什麼呢？
@@ -67,5 +90,30 @@
 1.把夏季商品排到貨架上  2.把防曬乳從倉庫搬出來
 
 3.幫麵包貼折扣標籤  4.把貨架上的商品收回倉庫
+
+### 第二題
+
+在一間點心公司，女生和課長正在對話。女生要如何修改會議的資料呢？
+
+女生：課長，這是明天會議的資料，我把新商品「柔軟仙貝」的包裝設計提案放在封面了。這款商品主要的目標客群是高齡者。
+
+男生（課長）：哦，封面上放了三個設計提案，都是同樣的設計，不同顏色，紅、藍、茶三種。為什麼把紅色放最大？
+女生：因為上週的會議我有報告過，網路問卷的結果，整體來說紅色最受歡迎。
+
+男生（課長）：是喔，雖然整體來說紅色最受歡迎，但依年齡層喜好還是有差吧。這次的資料，關於年齡層回答的數據放在哪裡？
+
+女生：放在商品介紹之後。
+
+男生（課長）：啊，還有圖表，顏色很清楚，蠻好看的。不過，針對高齡者這個目標族群，比起紅色，他們更喜歡茶色。開會的時候大家會討論，所以，這三個設計提案，不要做大小的區別，統一一下大小好嗎？
+
+女生：了解。
+
+男生（課長）：至於年齡層的數據，雖然放到商品介紹前面也不錯，不過目前就先這樣不用調整。
+
+女生要如何修改會議的資料？
+
+1. 刪除所有的設計提案    2.把所有的設計提案大小統一
+
+3. 變更年齡層回答圖表的顏色  4. 調整年齡層回答數據的位置
 
 
