--- a/日文檢定/聽力測驗.md
+++ b/日文檢定/聽力測驗.md
@@ -60,6 +60,30 @@
 
 ３．年代別の回答のグラフの色変える　4．年代別の回答のデータの位置を変える 
 
+### 第三題
+
+男：村田さん、職人の井上さんから連絡あった？制作をお願いしている革バッグの納期が遅れるよね？
+
+女：はい、先週お電話ありましたけど。指先で怪我してしまって、作業に時間がかかるって。
+
+男：そう、早く良くなるといいね。あのデザインのバッグ、人気が出て、予約がかなり増えてきてて、井上さんだけじゃ追いつかないから、他の職人さんにも作業を依頼するって話も出てたけど、どうなってる？
+
+女：職人さんをリストアップして、三人まで絞ったので、サンプルの作成を頼んだところです。
+
+男：そう、それはよかった。
+
+女：ただ、実際に作ったものを見ないと何とも言えませんし、三人のサンプルが揃ったら、お持ちしますね。早めに確保したいですよね。
+
+男：そうだね。この件は村田さんに任せるから、どんどん進めて。とは言え、納期が遅れてる分だけど、どのぐらいでできそうか、まずそこを聞いという。新しい人のどれくらい頼むかにも関わるし、場合によっては、予約受付を止めないといけなくなるから。
+
+女：はい、わかりました。
+
+かばんの会社で男の社長と女の人が話しています。女の人はこの後、まず何をしますか。
+
+１．井上さんに納品日をかくにんする。　　２．職人のリストを社長にみせる
+
+３．職人にサンプルの作成を頼む　　４．バッグの予約受付を中止する
+
 ---
 
 # 中文
@@ -119,4 +143,27 @@
 
 3. 變更年齡層回答圖表的顏色  4. 調整年齡層回答數據的位置
 
+### 第三題
+
+男：村田小姐，有收到職人井上先生的聯絡嗎？我們拜託他製作的皮革包包，交期好像要延遲了吧？
+
+女：是的，上週有接到他的電話。他說他手指受傷了，所以製作會需要比較多時間。
+
+男：這樣啊，希望他快點康復。那款設計的包包很受歡迎，預約數量也大幅增加，靠井上先生一個人已經應付不來了，我們之前不是有討論過請其他職人一起幫忙製作的事嗎？那邊進展如何？
+
+女：我已經把職人名單列出來，篩選到剩三位，剛請他們試做樣品了。
+
+男: 這樣啊，那很好。
+
+女：不過沒看到實際做出來的東西還不能下定論。等三位的樣品都齊了之後，我會拿來給您看。希望能早點確保人手。
+
+男：沒錯，這件事就交給妳處理，儘管加快進度。不過，既然原本的交期延誤了，首先還是要問問他大概什麼時候能做好。這也關係到要交給新的職人做多少份。搞不好還得暫停接受預約才行。
+
+女：好的，我明白了。
+
+這是在一間包包公司裡，男社長和女職員的對話。請問女職員接下來最先會做的事情是什麼？
+
+１．向井上先生確認交貨日期２．將職人的名單拿給社長看
+
+３．請職人製作樣品４．中止包包的預約受理
 
