--- a/日文檢定/聽力測驗.md
+++ b/日文檢定/聽力測驗.md
@@ -62,7 +62,7 @@
 
 ### 第三題
 
-男：村田さん、職人の井上さんから連絡あった？制作をお願いしている革バッグの納期が遅れるよね？
+男：村田さん、職人の井上さんから連絡あった？製作をお願いしている革バッグの納期が遅れるよね？
 
 女：はい、先週お電話ありましたけど。指先で怪我してしまって、作業に時間がかかるって。
 
