--- a/日文檢定/聽力測驗.md
+++ b/日文檢定/聽力測驗.md
@@ -1,13 +1,21 @@
 # 目錄
 - [日文](#日文)
   - [2024 07 jp](#2024-07-jp)
+    -[第一題 2024 07 jp](#第一題-2024-07-jp)
+    -[第二題 2024 07 jp](#第二題-2024-07-jp)
+    -[第三題 2024 07 jp](#第三題-2024-07-jp)
+    -[第四題 2024 07 jp](#第四題-2024-07-jp)    
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
+    - [第一題 2024 07 cn](#第一題-2024-07-cn)
+    - [第二題 2024 07 cn](#第二題-2024-07-cn)
+    - [第三題 2024 07 cn](#第三題-2024-07-cn)
+    - [第四題 2024 07 cn](#第四題-2024-07-cn) 
 
 # 日文
 ## 2024 07 jp
 
-### 第一題
+### 第一題 2024 07 jp
 スーパーでアルバイトの男の人と店長が話しています。アルバイトの男の人はこの後まず、何をしなければなりませんか。
 
 男：店長、おはようございます。
@@ -34,7 +42,9 @@
 
 ３．パンに値引きシールは貼る　４．棚の商品を片付ける
 
-### 第二題
+[第一題 2024 07 cn](#第一題-2024-07-cn)
+
+### 第二題 2024 07 jp
 
 お菓子の会社で女の人と課長が話しています。女の人は会議の資料をどのように直しますか。
 
@@ -60,7 +70,9 @@
 
 ３．年代別の回答のグラフの色変える　4．年代別の回答のデータの位置を変える 
 
-### 第三題
+[第二題 2024 07 cn](#第二題-2024-07-cn)
+
+### 第三題 2024 07 jp
 
 男：村田さん、職人の井上さんから連絡あった？製作をお願いしている革バッグの納期が遅れるよね？
 
@@ -84,12 +96,48 @@
 
 ３．職人にサンプルの作成を頼む　　４．バッグの予約受付を中止する
 
+[第三題 2024 07 cn](#第三題-2024-07-cn)
+
+### 第四題 2024 07 jp
+
+大学で大学祭の実行委員会の女の学生とサークルの部長が話しています。サークルの部長は企画書をどのように修正しましか。
+
+女：　すみません、大学祭実行委員会の加藤です。このサークルはお祭りにラーメン屋を出しますよね。えー、ご提出いただいた出店の企画書ですが、修正のお願いに来ました。
+
+男：はい、私が部長の吉田です。
+
+女：吉田さん、企画書。責任者の名前が抜けてました。こちらでお名前記入しておきました。
+
+男：すみません。
+
+女：それから、費用のところを確認してください。
+
+男：あ、はい。
+
+女：材料費の詳細、肉と野菜とか、もう少し具体的に書いてください。そうしないと大学から補助金が出ませんよ。調理方法の説明はそのままで結構です。あ、それしと当日の第一希望の場所は正門の近くになっていますが、希望が多いと抽選になります。場合によっては、第二希望に回ってもらいますが、よろしくお願いします。
+
+男：はい、わかりました。
+
+女：今週末までに出してください。
+
+男：はい。
+
+サークルの部長は企画書えをどのように修正しますか。
+
+１．責任者の名前を書く　　２．費用を詳しく書く
+
+３．調理方法の説明を書く　　４．第二希望の場所を書く
+
+[第四題 2024 07 cn](#第四題-2024-07-cn) 
 ---
 
 # 中文
 ## 2024 07 cn
 
-### 第一題
+### 第一題 2024 07 cn
+
+答案: 3
+
 超市裡，打工的男生和店長正在對話。這位打工的男生接下來最先需要做什麼呢？
 
 男生：店長，早安。
@@ -118,7 +166,9 @@
 
 3.幫麵包貼折扣標籤  4.把貨架上的商品收回倉庫
 
-### 第二題
+### 第二題 2024 07 cn
+
+答案: 2
 
 在一間點心公司，女生和課長正在對話。女生要如何修改會議的資料呢？
 
@@ -143,7 +193,9 @@
 
 3. 變更年齡層回答圖表的顏色  4. 調整年齡層回答數據的位置
 
-### 第三題
+### 第三題 2024 07 cn
+
+答案: 1
 
 男：村田小姐，有收到職人井上先生的聯絡嗎？我們拜託他製作的皮革包包，交期好像要延遲了吧？
 
@@ -166,4 +218,39 @@
 １．向井上先生確認交貨日期２．將職人的名單拿給社長看
 
 ３．請職人製作樣品４．中止包包的預約受理
+
+### 第四題 2024 07 cn
+
+答案: 2
+
+在大學裡，大學祭的實行委員會的一位女學生和某個社團的部長正在對話。社團部長要如何修改他們的企劃書呢？
+
+女： 不好意思，我是大學祭實行委員會的加藤。這個社團打算在祭典上開拉麵攤對吧。那個…你們提交的攤位企劃書，我來請你們修改一下。
+
+男： 好的，我是部長吉田。
+
+女： 吉田先生，企劃書上負責人的名字漏掉了。我這邊已經幫你填上去了。
+
+男： 不好意思。
+
+女： 然後，請確認費用的部分。
+
+男： 啊，好的。
+
+女： 材料費的細節，像是肉和蔬菜，請寫得更具體一些。不然的話，學校不會給補助金。
+烹調方法的說明就照原樣不用改。
+啊，還有，你們活動當天的第一志願地點是校門附近，但那裡申請的人很多會抽籤。
+有可能會讓你們轉到第二志願地點，請多配合。
+
+男： 好的，我了解了。
+
+女： 請在本週末之前交出來。
+
+男： 好的。
+
+社團的部長會如何修改企劃書呢？
+
+1. 填寫負責人的名字  2. 詳細寫出費用
+
+3. 撰寫烹調方法的說明  4. 寫上第二志願的地點
 
