--- a/日文檢定/聽力測驗.md
+++ b/日文檢定/聽力測驗.md
@@ -166,6 +166,8 @@
 
 3.幫麵包貼折扣標籤  4.把貨架上的商品收回倉庫
 
+[第一題 2024 07 jp](#第一題-2024-07-jp)
+
 ### 第二題 2024 07 cn
 
 答案: 2
@@ -193,6 +195,8 @@
 
 3. 變更年齡層回答圖表的顏色  4. 調整年齡層回答數據的位置
 
+[第二題 2024 07 jp](#第二題-2024-07-jp)
+
 ### 第三題 2024 07 cn
 
 答案: 1
@@ -218,6 +222,8 @@
 １．向井上先生確認交貨日期２．將職人的名單拿給社長看
 
 ３．請職人製作樣品４．中止包包的預約受理
+
+[第三題 2024 07 jp](#第三題-2024-07-jp)
 
 ### 第四題 2024 07 cn
 
@@ -254,3 +260,4 @@
 
 3. 撰寫烹調方法的說明  4. 寫上第二志願的地點
 
+[第四題 2024 07 jp](#第四題-2024-07-jp)
