--- a/日文檢定/聽力測驗.md
+++ b/日文檢定/聽力測驗.md
@@ -4,13 +4,15 @@
     - [第一題 2024 07 jp](#第一題-2024-07-jp)
     - [第二題 2024 07 jp](#第二題-2024-07-jp)
     - [第三題 2024 07 jp](#第三題-2024-07-jp)
-    - [第四題 2024 07 jp](#第四題-2024-07-jp)    
+    - [第四題 2024 07 jp](#第四題-2024-07-jp)
+    - [第五題 2024 07 jp](#第五題-2024-07-jp)  
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
     - [第二題 2024 07 cn](#第二題-2024-07-cn)
     - [第三題 2024 07 cn](#第三題-2024-07-cn)
-    - [第四題 2024 07 cn](#第四題-2024-07-cn) 
+    - [第四題 2024 07 cn](#第四題-2024-07-cn)
+    - [第五題 2024 07 cn](#第五題-2024-07-cn) 
 
 # 日文
 ## 2024 07 jp
@@ -129,6 +131,21 @@
 ３．調理方法の説明を書く　　４．第二希望の場所を書く
 
 [第四題 2024 07 cn](#第四題-2024-07-cn) 
+
+### 第五題 2024 07 jp
+
+海の体験学習のイベントで係の人が話しています。参加者はこの後まず、何に参加しますか。
+
+女：皆さん、海を楽しもう体験にご参加ありがとうございます。各種の体験に先立って、屋内で海辺の生き物についてのセミナーを行う予定でしたが、本日は潮の流れを考慮し、漁業体験の準備が整うまでの間、海辺の生き物の観察会を開催します。午後はヨットの操縦体験から始めます。
+
+参加者はこの後、何に参加しますか。
+
+１．　海辺の生き物についてのセミナー　　２．漁業体験
+
+３．　海辺の生き物の観察会　　４．ヨットの操縦体験
+
+[第五題 2024 07 cn](#第五題-2024-07-cn) 
+
 ---
 
 # 中文
@@ -261,3 +278,18 @@
 3. 撰寫烹調方法的說明  4. 寫上第二志願的地點
 
 [第四題 2024 07 jp](#第四題-2024-07-jp)
+
+### 第五題 2024 07 cn
+
+在「海上體驗學習」活動中，工作人員正在發言。參加者接下來最先會參加什麼呢？
+
+女：各位，感謝大家參加「享受大海的體驗」活動。本來我們預定在各項體驗開始前，先在室內舉行一場關於海邊生物的講座，
+但考慮到今天的潮汐情況，在漁業體驗準備完成之前，我們將舉辦海邊生物的觀察活動。下午則從帆船操作體驗開始。
+
+參加者接下來最先會參加什麼？
+
+1．關於海邊生物的講座  2．漁業體驗
+
+3．海邊生物的觀察活動  4．帆船操作體驗
+
+[第五題 2024 07 jp](#第五題-2024-07-jp)
